# finance-digest

./: .env.example  pyproject.toml
src/finance_digest/: analyst.py  config.py  enricher.py  notifier.py  reader.py  runner.py  telemetry.py
