[project]
name = "finance-digest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50",
    "requests>=2.32",
]

[project.scripts]
finance-digest = "finance_digest.runner:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_digest"]
